--- a/about.html
+++ b/about.html
@@ -31,16 +31,20 @@
 
                   <ul>
                      <li>
-                        <a href="/index.html">Home</a>
+                        <!-- <a href="/index.html">Home</a> -->
+                        <a href="https://semajssor.github.io/knowledgehut-milestone1-final_project/index.html">Home</a>
                      </li>
                      <li class="active">
-                        <a href="/about.html">About</a>
+                        <!-- <a href="/about.html">About</a> -->
+                        <a href="https://semajssor.github.io/knowledgehut-milestone1-final_project/about.html">About</a>
                      </li>
                      <li>
-                        <a href="/projects.html">Projects</a>
+                        <!-- <a href="/projects.html">Projects</a> -->
+                        <a href="https://semajssor.github.io/knowledgehut-milestone1-final_project/projects.html">Projects</a>
                      </li>
                      <li>
-                        <a href="/contact.html">Contact</a>
+                        <!-- <a href="/contact.html">Contact</a> -->
+                        <a href="https://semajssor.github.io/knowledgehut-milestone1-final_project/contact.html">Contact</a>
                      </li>
                   </ul>
 
